Change complete structure and handling of the API. Update to v2.
